adapt the ps supplier to get all files recursively