@@ -4,8 +4,9 @@ import org.ddolib.modeling.DdoModel;
 import org.ddolib.modeling.FastLowerBound;
 import org.ddolib.util.testbench.TestDataSupplier;
 
-import java.io.File;
-import java.nio.file.Paths;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -19,14 +20,13 @@ public class PSTestDataSupplier extends TestDataSupplier<PSState, PSProblem> {
 
     @Override
     protected List<PSProblem> generateProblems() {
-        File[] files = new File(dir).listFiles();
-        assert files != null;
-        Stream<File> stream = Stream.of(files);
-
-        return stream.filter(file -> !file.isDirectory())
-                .map(File::getName)
-                .map(fileName -> Paths.get(dir, fileName))
-                .map(filePath -> new PSProblem(filePath.toString())).toList();
+        try (Stream<Path> stream = Files.walk(Path.of(dir))) {
+            return stream.filter(Files::isRegularFile) // get only files
+                    .map(filePath -> new PSProblem(filePath.toString()))
+                    .toList();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
